--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 								sebanyak permutasi dari jumlah hari. Oleh karena itu, permasalahan ini lebih tepat diselesaikan secara linear
 								menggunakan algoritma greedy. </p>
 								
+								<hr />
 								<h3>Stock Buy Sell</h3>
 								<center><img src="images/bs.jpg" alt="Buy-Sell" style="width:450px;height:300px;"></center>
 								<p><b>Stock Buy Sell</b> adalah suatu metode yang digunakan untuk <b>memaksimalkan keuntungan</b> dengan
@@ -88,7 +89,7 @@ int main () {
     return 0;
 }
 </code></pre>
-								<p>Misalkan terdapat suatu barang dengan harga ditunjukkan dalam array {100, 180, 260, 310, 40, 535, 695},
+								<p>Misalkan suatu saham dengan harga per hari ditunjukkan dalam array {100, 180, 260, 310, 40, 535, 695},
 								dengan nomor indeks adalah nomor hari. Pemecahan masalah dalam kasus ini dapat digunakan metode Stock Buy Sell.
 								Keuntungan maksimal didapatkan dengan melakukan pembelian di hari ke-1 lalu penjualan di hari ke-4. Lalu 
 								dilanjutkan dengan melakukan pembelian di hari ke-5 lalu penjualan di hari ke-7. </p>
